# smallpt-gpu

./: .gitignore  CMakeLists.txt  main.cpp  render.cl  render.h
